# MTfit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
docs/: refactoring.md  theory_and_output.md
examples/: make_csv_file.py
src/MTfit/: __init__.py  _version.py  exceptions.py  inversion.py  run.py  sampling.py
src/MTfit/algorithms/: base.py  cmarkov_chain_monte_carlo.pyx  markov_chain_monte_carlo.py  monte_carlo.py
src/MTfit/convert/: cmoment_tensor_conversion.pyx  moment_tensor_conversion.py
src/MTfit/extensions/: __init__.py  cscatangle.pyx  scatangle.py
src/MTfit/probability/: cprobability.pyx  probability.py
src/MTfit/tests/: benchmarking.py  conftest.py
src/MTfit/tests/unit/: test_inversion.py  test_run.py  test_sampling.py
src/MTfit/tests/unit/algorithms/: test_base.py  test_cmarkov_chain_monte_carlo.py  test_markov_chain_monte_carlo.py
src/MTfit/tests/unit/convert/: test_cmoment_tensor_conversion.py  test_moment_tensor_conversion.py
src/MTfit/tests/unit/extensions/: test_scatangle.py
src/MTfit/tests/unit/probability/: test_probability.py
src/MTfit/tests/unit/utilities/: test_argparser.py  test_file_io.py
src/MTfit/utilities/: argparser.py  argparser_defaults.py  extensions.py  file_io.py  multiprocessing_helper.py  unittest_utils.py
